Add environment configuration setup
- Add .env.example template with shared test credentials
- Add env-updateDoc.md documentation for environment setup
- Update .gitignore to properly exclude environment files
- Remove obsolete environment.template.ts (replaced by .env system)

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,15 @@ testem.log
 .DS_Store
 Thumbs.db
 
-/src/environment/environment.ts
+# Environment files
+.env
+.env.local
+.env.production
+.env.*.local
 /src/environment/*.backup.*
-firebase-project-info.txt
+
 # Firebase
+firebase-project-info.txt
 .firebase
 *-debug.log
 .runtimeconfig.json
