--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular/build:application",
+					"builder": "@ngx-env/builder:application",
 					"options": {
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
@@ -55,7 +55,7 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular/build:dev-server",
+					"builder": "@ngx-env/builder:dev-server",
 					"configurations": {
 						"production": {
 							"buildTarget": "join:build:production"
