--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@angular/build": "^20.1.5",
 		"@angular/cli": "^20.1.5",
 		"@angular/compiler-cli": "^20.1.0",
+		"@ngx-env/builder": "^20.1.1",
 		"@types/jasmine": "~5.1.0",
 		"@types/node": "^24.6.0",
 		"angular-eslint": "20.3.0",
