Centralize Firebase configuration and remove code duplication
Replace distributed import.meta.env calls with centralized firebase.config.ts module. This eliminates code duplication and provides a single source for Firebase configuration.

Changes:
- Add src/config/firebase.config.ts as central config module
- Update app.config.ts to import from firebase.config
- Update firestore-init.service.ts to import from firebase.config
- Add @config/* path alias to tsconfig.json
- Remove obsolete src/environment/environment.ts

This reduces repeated import.meta.env calls from 12+ lines to a single import statement across all files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
 			"@main/*": ["app/main/*"],
 			"@styles/*": ["styles/*"],
 			"@app/*": ["app/*"],
+			"@config/*": ["config/*"],
 			"@data/*": ["../scripts/data/*"],
 			"@environments/*": ["environment/*"]
 		}
